tests/machine/x/scala/group_items_iteration.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_items_iteration.scala:9: error: identifier expected but 'val' found.
        total += x.val
                   ^
one error found
